--- a/learning-events-app/package.json
+++ b/learning-events-app/package.json
@@ -12,6 +12,8 @@
     "framer-motion": "^4.1.17",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.2",
+    "react-bootstrap-date-picker": "^5.1.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
