--- a/learning-events-app/package.json
+++ b/learning-events-app/package.json
@@ -11,11 +11,13 @@
     "bootstrap": "^5.1.3",
     "framer-motion": "^4.1.17",
     "jquery": "^3.6.0",
+    "rc-slider": "^9.7.4",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-bootstrap-date-picker": "^5.1.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-multi-carousel": "^2.6.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-yandex-maps": "^4.6.0",
