--- a/learning-events-app/package.json
+++ b/learning-events-app/package.json
@@ -16,12 +16,14 @@
     "react-bootstrap": "^2.0.2",
     "react-bootstrap-date-picker": "^5.1.0",
     "react-dom": "^17.0.2",
+    "react-geocode": "^0.2.3",
     "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.6.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-yandex-maps": "^4.6.0",
     "redux": "^4.1.1",
+    "reverse-geocoding-google": "^1.1.0",
     "styled-components": "^5.3.3"
   },
   "scripts": {
