--- a/learning-events-app/package.json
+++ b/learning-events-app/package.json
@@ -15,6 +15,8 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-bootstrap-date-picker": "^5.1.0",
+    "react-cookies": "^0.1.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-geocode": "^0.2.3",
     "react-icons": "^4.3.1",
@@ -23,6 +25,7 @@
     "react-scripts": "4.0.3",
     "react-yandex-maps": "^4.6.0",
     "redux": "^4.1.1",
+    "redux-thunk": "^2.4.1",
     "reverse-geocoding-google": "^1.1.0",
     "styled-components": "^5.3.3"
   },
